# 2do

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  void.txt
lib/: CMakeLists.txt
src/: 2do.c  2do.h  2do.h.in  add.c  add.h  arguments.c  arguments.h  array.h  config-command.c  config-command.h  config.c  config.h  default-config.c  default-config.h  done.c  exception.h  file.c  help.c  help.h  info.h.in  list.c  list.h  macros.h  remove.c  remove.h  todo-file.c  todo-file.h
src/commands/: add.c  config.c  config.h  done.c  done.h  help.c  list.c  remove.c  version.c  version.h
src/config/: config.c  config.h  default-config.c
src/file/: file.c  file.h  filebuffer.c  filebuffer.h  finder.c  finder.h
src/todo-file/: todo-file.c  todo-file.h
